--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "nodemon": "^1.17.3",
-    "pg": "^7.4.1"
+    "passport": "^0.4.0",
+    "pg": "^7.4.1",
+    "sequelize": "^4.37.6"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/callumbyers/pop.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/callumbyers/pop/issues"
+  },
+  "homepage": "https://github.com/callumbyers/pop#readme"
 }
