--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "nodemon": "^1.17.3",
-    "passport": "^0.4.0",
     "pg": "^7.4.1",
     "sequelize": "^4.37.6"
   },
