--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "alert-node": "^1.2.1",
     "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
